--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
+            <p class="text-center">Copy Right 2020-2021</p>
         </div>
     </section>
 
